# embedded_rust_talk

./: .gitignore  .gitmodules  Readme.md
P001_raspberry_led/: Cargo.toml
P001_raspberry_led/src/: main.rs
p002-stm32-led/: Cargo.toml  itm.txt
p002-stm32-led/.cargo/: config.toml
p002-stm32-led/src/: main.rs
p003-stm32-pac-led/: Cargo.toml  Embed.toml  cargoembed.gdb  gdb_attach.sh  itm.txt
p003-stm32-pac-led/.cargo/: config.toml
p003-stm32-pac-led/src/: main.rs
p004-compass/: Cargo.toml  itm.txt  openocd.cfg  openocd.gdb
p004-compass/src/: main.rs
p005-rtic-compass/: Cargo.toml  openocd.cfg
p005-rtic-compass/src/: main.rs
p006-blink-embassy/: Cargo.toml
p006-blink-embassy/.cargo/: config.toml
p006-blink-embassy/src/: main.rs
