[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "p006-blink-embassy"
version = "0.1.0"
resolver = "2"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
embassy = { version = "0.1.0", git="https://github.com/embassy-rs/embassy.git",  features = ["defmt", "defmt-trace"] }
embassy-traits = { version = "0.1.0", git="https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-trace", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-tim2"]  }
embassy-hal-common = {version = "0.1.0", git="https://github.com/embassy-rs/embassy.git" }

defmt = {version = "0.2.3"}
defmt-rtt = "0.2.0"

cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
embedded-hal = "0.2.6"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
